--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -9,3 +9,6 @@ v2.0.0:
     - 000001_create_user_notifications.php
     - 000002_create_user_addresses.php
     - extend_users_table.php
+v2.0.1:
+    - 000003_create_user_genders.php
+    - extend_users_table_gender.php
